# AI-News-Intelligent-AI-Powered-News-Platform

./: .gitignore  README.md  index.html
.github/workflows/: ci_cd.yml
backend/: CMakeLists.txt  Dockerfile  docker-compose.yml
backend/k8s/: deployment.yml  k8s-manifests.yaml
backend/nginx/: nginx.conf
backend/nginx/ssl/: .gitkeep
backend/src/: main.cpp
backend/src/api/middleware/: auth_middleware.hpp  rate_limiter.hpp
backend/src/api/validators/: request_validators.hpp
backend/src/config/: app_config.hpp
backend/src/core/ai/: ai_controller.hpp  ai_service.hpp  chat_controller.hpp
backend/src/core/auth/: auth_controller.hpp  jwt_service.hpp  oauth_service.hpp
backend/src/core/news/: news_controller.hpp  news_fetcher.hpp
backend/src/core/notification/: ws_manager.hpp
backend/src/core/weather/: weather_controller.hpp  weather_service.hpp
backend/src/infrastructure/: elasticsearch_client.hpp  kafka_producer.hpp  minio_client.hpp  redis_client.hpp
backend/tests/unit/: test_jwt.cpp  test_validators.cpp
database/: indexes.sql  partitioning.sql  schema.sql  stored_procedures.sql  triggers.sql
docs/: api_documentation.md
flutter_app/: pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/lib/core/network/: api_client.dart
flutter_app/lib/core/router/: app_router.dart
flutter_app/lib/core/theme/: app_theme.dart
flutter_app/lib/features/home/: home_screen.dart
flutter_app/lib/features/home/widgets/: breaking_banner.dart  category_chips.dart  news_card.dart  sports_ticker.dart  trending_topics.dart  weather_widget.dart
flutter_app/lib/features/news/models/: article_model.dart
flutter_app/lib/features/news/providers/: news_provider.dart
flutter_app/lib/features/sports/providers/: sports_provider.dart
flutter_app/lib/features/weather/models/: weather_model.dart
flutter_app/lib/features/weather/providers/: weather_provider.dart
flutter_app/lib/services/: notification_service.dart
